Added File path normalization for file add commands